[gd_scene load_steps=6 format=3 uid="uid://iqknf64cgqwd"]

[ext_resource type="Script" uid="uid://fc5fybc2xgdq" path="res://classes/player/controllers/movement_controller_player_alt/movement_controller_player_alt.gd" id="1_53bl4"]
[ext_resource type="Script" uid="uid://cnfr7v75ouaag" path="res://classes/state/state_machine.gd" id="2_p25oe"]
[ext_resource type="Script" uid="uid://4vbfplap2s17" path="res://classes/player/controllers/movement_controller_player_alt/states/player_alt_fly_state.gd" id="3_icaa2"]
[ext_resource type="Script" uid="uid://bejfntyu087hx" path="res://classes/player/controllers/movement_controller_player_alt/states/player_alt_idle_state.gd" id="4_727mf"]
[ext_resource type="Script" uid="uid://bg2qkqsgmpk82" path="res://classes/player/controllers/movement_controller_player_alt/states/player_alt_walk_state.gd" id="5_jigc3"]

[node name="Movement_Controller_Player_Alt" type="Node"]
script = ExtResource("1_53bl4")
metadata/_custom_type_script = "uid://fc5fybc2xgdq"

[node name="State_Machine" type="Node" parent="."]
script = ExtResource("2_p25oe")
metadata/_custom_type_script = "uid://cnfr7v75ouaag"

[node name="Player_Alt_Fly_State" type="Node" parent="State_Machine"]
script = ExtResource("3_icaa2")
metadata/_custom_type_script = "uid://4vbfplap2s17"

[node name="Player_Alt_Idle_State" type="Node" parent="State_Machine"]
script = ExtResource("4_727mf")
metadata/_custom_type_script = "uid://bejfntyu087hx"

[node name="Player_Alt_Walk_State" type="Node" parent="State_Machine"]
script = ExtResource("5_jigc3")
metadata/_custom_type_script = "uid://bg2qkqsgmpk82"
